<resources>
    <string name="app_name">EventFriends</string>
    <string name="exit">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_text_body">Event text body bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla bla</string>
    <string name="message">Message</string>
    <string name="more">More</string>
    <string name="hide">Hide</string>
    <string name="set_date">Set date</string>
    <string name="set_time">Set time</string>
    <string name="set_location">Set location</string>
    <string name="add_location">Add location</string>
    <string name="add_event_link">Add event link</string>
    <string name="link_for_feedback_with_you">Link for feedback with you</string>
    <string name="additional_info">Additional info</string>
    <string name="create_btn">Create</string>
    <string name="event_title">Event title</string>
    <string name="event_creator">EVENT CREATOR</string>
    <string name="creator_name">Creator name</string>
    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="link_on_creator">Link on creator</string>
    <string name="link_on_event">Link on event</string>
    <string name="city">City</string>
    <string name="link">link</string>
    <string name="event_type">Event type</string>
    <string name="address">Address</string>
</resources>
