<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/page_event_type_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:letterSpacing="0"
        android:text="@string/event_type"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/page_event_type_img"
        app:layout_constraintTop_toBottomOf="@+id/page_event_time_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/page_event_date_img"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_event_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/page_event_date_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page_event_date_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/page_event_time_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_access_time_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/page_event_time_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page_event_time_text_view" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/page_event_type_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_class_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/page_event_type_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page_event_type_text_view" />

    <View
        android:id="@+id/page_divider_type_location"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_event_type_text_view" />

    <View
        android:id="@+id/page_divider_location_event_link"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_card_view" />


    <View
        android:id="@+id/page_divider_event_link_person_link"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_link_card_view" />

    <View
        android:id="@+id/page_divider_person_link_about"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_link_card_view" />

    <androidx.cardview.widget.CardView
        android:id="@+id/location_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_divider_type_location">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/page_event_location_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_location_on_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/page_event_address_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/page_event_city_text_view" />

            <TextView
                android:id="@+id/page_event_city_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:letterSpacing="0"
                android:text="@string/address"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/page_event_location_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/page_event_address_text_view"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:letterSpacing="0"
                android:text="@string/link"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/page_event_location_img"
                app:layout_constraintTop_toBottomOf="@+id/page_event_city_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/event_link_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_divider_location_event_link">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/page_event_link_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_link_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/page_event_link_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/page_event_link_tittle_text_view" />

            <TextView
                android:id="@+id/page_event_link_tittle_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:letterSpacing="0"
                android:text="@string/link_on_event"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/page_event_link_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/page_event_link_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:letterSpacing="0"
                android:text="@string/link"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/page_event_link_img"
                app:layout_constraintTop_toBottomOf="@+id/page_event_link_tittle_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/person_link_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:selectableItemBackground"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_divider_event_link_person_link">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/page_event_person_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/ic_person_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/page_event_creator_link_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/page_event_creator_link_title_text_view" />

            <TextView
                android:id="@+id/page_event_creator_link_title_text_view"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:letterSpacing="0"
                android:text="@string/link_on_creator"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/page_event_person_img"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/page_event_creator_link_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:letterSpacing="0"
                android:text="@string/link"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/page_event_person_img"
                app:layout_constraintTop_toBottomOf="@+id/page_event_creator_link_title_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/page_event_additional_info_image_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_baseline_notes_24px"
        app:layout_constraintBottom_toBottomOf="@+id/page_event_about_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/page_event_about_text_view" />

    <ImageView
        android:id="@+id/page_event_profile_photo"
        android:layout_width="0dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_user_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/page_event_creator_tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:letterSpacing="1.5"
        android:text="@string/event_creator"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/page_event_profile_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/page_event_creator_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.15"
        android:text="@string/creator_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/page_event_profile_photo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_event_creator_tittle" />

    <TextView
        android:id="@+id/page_event_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:letterSpacing="0"
        android:text="@string/date"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/page_event_date_img"
        app:layout_constraintTop_toBottomOf="@+id/page_event_profile_photo" />

    <TextView
        android:id="@+id/page_event_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:letterSpacing="0"
        android:text="@string/time"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/page_event_time_img"
        app:layout_constraintTop_toBottomOf="@+id/page_event_date_text_view" />

    <TextView
        android:id="@+id/page_event_about_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:letterSpacing="0"
        android:text="@string/about"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/page_event_additional_info_image_view3"
        app:layout_constraintTop_toBottomOf="@+id/page_divider_person_link_about" />

    <TextView
        android:id="@+id/page_event_additional_info_text_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/event_text_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_event_additional_info_image_view3" />

    <ProgressBar
        android:id="@+id/pageProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>


</androidx.constraintlayout.widget.ConstraintLayout>